--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.13.1",
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
